--- a/templates/nested/privatelink.yaml
+++ b/templates/nested/privatelink.yaml
@@ -14,6 +14,13 @@ Resources:
       AcceptanceRequired: True
       NetworkLoadBalancerArns:
         - !Sub '{{resolve:ssm:/${Environment}/${EksClusterName}/kotsadm/nlbarn}}'
+      Tags:
+        - Key: Name
+          Value: ${EksClusterName}
+        - Key: ManangedBy
+          Value: cloudformation
+        - Key: TSM
+          Value: xxx@example.com
 
   EndpointServicePermissions:
     Type: AWS::EC2::VPCEndpointServicePermissions
