--- a/templates/nested/amazon-eks/templates/amazon-eks-functions.template.yaml
+++ b/templates/nested/amazon-eks/templates/amazon-eks-functions.template.yaml
@@ -98,7 +98,7 @@ Resources:
     DependsOn: [LambdaSGCleanup, CopyZips]
     Type: AWS::Lambda::Function
     Properties:
-      FunctionName: !Sub 'awsqs-kubernetes-resource-proxy-${EKSClusterName}'
+      FunctionName: !Sub '${EKSClusterName}-awsqs-kubernetes-resource-proxy'
       Handler: awsqs_kubernetes_resource.utils.proxy_wrap
       MemorySize: 256
       Role: !Ref KubernetesAdminRoleArn
@@ -120,7 +120,7 @@ Resources:
     Type: AWS::Lambda::Function
     DependsOn: CopyZips
     Properties:
-      FunctionName: !Sub "EKS-QuickStart-KubeManifest-${EKSClusterName}"
+      FunctionName: !Sub "${EKSClusterName}-KubeManifest"
       Handler: lambda_function.lambda_handler
       MemorySize: 256
       Role: !Ref KubernetesAdminRoleArn
@@ -143,7 +143,7 @@ Resources:
     Type: AWS::Lambda::Function
     DependsOn: CopyZips
     Properties:
-      FunctionName: !Sub "EKS-QuickStart-KubeGet-${EKSClusterName}"
+      FunctionName: !Sub "${EKSClusterName}-KubeGet"
       Handler: lambda_function.lambda_handler
       MemorySize: 256
       Role: !Ref KubernetesAdminRoleArn
