--- a/templates/nested/amazon-eks/templates/awsqseks-cluster-provision-iam.yaml
+++ b/templates/nested/amazon-eks/templates/awsqseks-cluster-provision-iam.yaml
@@ -104,6 +104,7 @@ Resources:
                   - secretsmanager:CreateSecret
                   - secretsmanager:GetSecretValue
                   - secretsmanager:DescribeSecret
+                  - secretsmanager:TagResource
                 #Resource: !Sub "arn:aws:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:${Environment}/${EksClusterName}/*",
                 Resource: "*"
                 Effect: Allow
