--- a/templates/nested/amazon-eks/templates/amazon-eks-prerequisites.template.yaml
+++ b/templates/nested/amazon-eks/templates/amazon-eks-prerequisites.template.yaml
@@ -52,7 +52,7 @@ Resources:
   PreReqsFunction:
     Type: AWS::Lambda::Function
     Properties:
-      Description: Checks whether the per-region and per-account EKS Quick Start stacks are present and up to date.
+      Description: Checks whether the per-region and per-account EKS stacks are present and up to date.
       Handler: index.handler
       Runtime: python3.7
       Role: !GetAtt PreReqsRole.Arn
