--- a/templates/nested/amazon-eks/templates/amazon-eks-advanced-configuration.template.yaml
+++ b/templates/nested/amazon-eks/templates/amazon-eks-advanced-configuration.template.yaml
@@ -1,9 +1,6 @@
 AWSTemplateFormatVersion: "2010-09-09"
 Description: Configure advanced options for the Amazon EKS
 Metadata:
-  QuickStartDocumentation:
-    EntrypointName: "Configure advanced options"
-    Order: Index d
   ConfigSetName: !Ref ConfigSetName
   LintSpellExclude:
     - https://github.com/awslabs/amazon-eks-ami/
@@ -26,16 +23,13 @@ Metadata:
     - Latest
     - Custom
     - Security Group
-    - Consul
-    - Vault
     - namespace
-    - HashiCorp
     - Partner
     - UI
   AWS::CloudFormation::Interface:
     ParameterGroups:
       - Label:
-          default: Quick Start configuration
+          default: Configuration
         Parameters:
           - ConfigSetName
       - Label:
@@ -66,41 +60,6 @@ Metadata:
           - NodeInstanceType3
           - NodeInstanceType4
           - OnDemandPercentage
-      - Label:
-          default: Bastion configuration
-        Parameters:
-          - BastionOS
-          - BastionBootstrapScript
-          - BastionInstanceType
-          - BastionRootVolumeSize
-          - BastionIAMRoleName
-          - BastionEnableTCPForwarding
-          - BastionEnableX11Forwarding
-          - BastionVariables
-      - Label:
-          default: HashiCorp Vault (AWS Partner security)
-        Parameters:
-          - VaultKubernetesNameSpace
-          - VaultUILoadBalancerType
-          - VaultUIAccessCIDR
-          - VaultVersion
-          - VaultDeploymentSize
-          - VaultNodes
-      - Label:
-          default: HashiCorp Consul (AWS Partner containers)
-        Parameters:
-          - ConsulKubernetesNameSpace
-          - ConsulUILoadBalancerType
-          - ConsulUIAccessCIDR
-          - ConsulVersion
-          - ConsulDeploymentSize
-          - ConsulNodes
-      - Label:
-          default: EFS storage class configuration
-        Parameters:
-          - EfsPerformanceMode
-          - EfsThroughputMode
-          - EfsProvisionedThroughputInMibps
     ParameterLabels:
       ConfigSetName:
         default: Config set name
@@ -124,28 +83,6 @@ Metadata:
         default: Volume size
       CustomAmiId:
         default: Custom AMI ID
-      BastionOS:
-        default: Operating system
-      BastionBootstrapScript:
-        default: Bootstrap script
-      BastionInstanceType:
-        default: Instance type
-      BastionRootVolumeSize:
-        default: Root volume size
-      BastionIAMRoleName:
-        default: IAM role name
-      BastionEnableTCPForwarding:
-        default: Enable TCP forwarding
-      BastionEnableX11Forwarding:
-        default: Enable X11 forwarding
-      BastionVariables:
-        default: Variables
-      EfsPerformanceMode:
-        default: Performance mode
-      EfsThroughputMode:
-        default: Throughput mode
-      EfsProvisionedThroughputInMibps:
-        default: Provisioned throughput in Mibps
       Labels:
         default: Labels
       Taints:
@@ -170,35 +107,11 @@ Metadata:
         default: Instance type 4
       OnDemandPercentage:
         default: On-demand percentage
-      VaultUILoadBalancerType:
-        default: Consul UI Internal or external load balancer?
-      VaultUIAccessCIDR:
-        default: Permitted IP range for Vault UI
-      VaultVersion:
-        default: HashiCorp Vault version
-      VaultDeploymentSize:
-        default: HashiCorp Vault deployment size
-      VaultNodes:
-        default: HashiCorp Vault server nodes
-      VaultKubernetesNameSpace:
-        default: Kubernetes namespace for HashiCorp Vault
-      ConsulUILoadBalancerType:
-        default: Consul UI Internal or external load balancer?
-      ConsulUIAccessCIDR:
-        default: Permitted IP range for Consul UI
-      ConsulVersion:
-        default: HashiCorp Consul version
-      ConsulDeploymentSize:
-        default: HashiCorp Consul deployment size
-      ConsulNodes:
-        default: HashiCorp Consul server nodes
-      ConsulKubernetesNameSpace:
-        default: Kubernetes namespace for HashiCorp Consul
 Parameters:
   ConfigSetName:
     Type: String
     Description: "(Optional) Name used to map advanced parameters to an EKS cluster. In order to apply the defined parameters, 
-    the name must match the name used when launching the main EKS Quick Start."
+    the name must match the name used when launching the main EKS."
   EKSPrivateAccessEndpoint:
     Type: String
     AllowedValues: [Enabled, Disabled]
@@ -214,7 +127,8 @@ Parameters:
   EKSEncryptSecrets:
     Type: String
     AllowedValues: [Enabled, Disabled]
-    Default: Enabled
+    #Default: Enabled
+    Default: Disabled
     Description: Envelope encryption of Kubernetes secrets using KMS.
   EKSEncryptSecretsKmsKeyArn:
     Type: String
@@ -251,57 +165,6 @@ Parameters:
     AllowedValues: [ "Enabled", "Disabled" ]
     Default: "Enabled"
     Description: Enables IAM roles for Kubernetes service accounts.
-  BastionOS:
-    Type: String
-    AllowedValues: [ "Amazon-Linux2-HVM", "Amazon-Linux-HVM", "CentOS-7-HVM", "Ubuntu-Server-14.04-LTS-HVM", "Ubuntu-Server-16.04-LTS-HVM", "SUSE-SLES-15-HVM" ]
-    Default: "Amazon-Linux2-HVM"
-    Description: Linux distribution of the bastion host.
-  BastionBootstrapScript:
-    Default: ""
-    Type: String
-    Description: "(Optional) Custom initialization script to run during setup. If left blank, the default bootstrap script is used."
-  BastionInstanceType:
-    Default: "t3.micro"
-    Type: String
-    Description: Instance type for the bastion host.
-  BastionRootVolumeSize:
-    Type: Number
-    Default: 10
-    Description: Size in GB for the root EBS volume.
-  BastionIAMRoleName:
-    Type: String
-    Default: ""
-    Description: "(Optional) An existing IAM role name to attach to the bastion host. If left blank, a new role is created."
-  BastionEnableTCPForwarding:
-    Type: String
-    Default: "false"
-    AllowedValues: [ "true", "false" ]
-    Description: Choose "true" to enable TCP forwarding.
-  BastionEnableX11Forwarding:
-    Type: String
-    Default: "false"
-    AllowedValues: [ "true", "false" ]
-    Description: Choose "true" to enable X11 forwarding.
-  BastionVariables:
-    Type: String
-    Default: ""
-    Description: "(Optional) Comma-separated list of environment variables for bootstrapping. The variables must be in the format KEY=VALUE. VALUE cannot contain commas."
-  EfsPerformanceMode:
-    Type: String
-    AllowedValues: [ generalPurpose, maxIO ]
-    Default: generalPurpose
-    Description: Only applies if the EfsStorageClass parameter is set to "Enabled." Choose "maxIO" mode to provide greater IOPS with an increased latency.
-  EfsThroughputMode:
-    Type: String
-    AllowedValues: [ bursting, provisioned ]
-    Default: bursting
-    Description: Only applies if the EfsStorageClass parameter is set to "Enabled." For throughput that is not dependent on the amount of data stored in the file system, choose "provisioned."
-  EfsProvisionedThroughputInMibps:
-    Type: Number
-    MinValue: 0
-    MaxValue: 1024
-    Default: 0
-    Description: Only applies if the EfsStorageClass parameter is set to "Enabled." If "EFS throughput mode" is set, the "provisioned" value must be in the 0–1024 range. If it's set to "bursting," this must be set to 0.
   OnDemandPercentage:
     Type: Number
     MinValue: 0
@@ -350,90 +213,6 @@ Parameters:
     Default: ""
     Type: String
     Description: (Optional) Provide the ID of a security group to use for this node group. If this is not specified, one is created.
-  VaultVersion:
-    Type: String
-    Default: "1.6.0"
-    Description: (Optional)
-    AllowedValues:
-      - "1.6.0"
-      - "1.5.5"
-  VaultDeploymentSize:
-    Type: String
-    Default: "small"
-    Description: Deployment size of dedicated HashiCorp Vault nodes.
-    AllowedValues:
-      - "small"
-      - "medium"
-      - "large"
-  VaultKubernetesNameSpace:
-    Default: "vault-server"
-    Type: String
-    Description: Kubernetes namespace for HashiCorp Vault.
-  VaultNodes:
-    Type: Number
-    Default: "3"
-    AllowedValues:
-      - "3"
-    Description: The number of dedicated Vault server nodes and pods.
-  VaultUILoadBalancerType:
-    Type: String
-    Default: "External"
-    Description: Choose whether the load balancer for HashiCorp Vault is internal or external to the VPC.
-    AllowedValues:
-      - "Internal"
-      - "External"
-  VaultUIAccessCIDR:
-    Default: 127.0.0.1/32
-    AllowedPattern: "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/([0-9]|[1-2][0-9]|3[0-2]))$"
-    Description: 'The CIDR IP range that is permitted to access Vault. Note: A value
-      of 0.0.0.0/0 allows access from ANY IP address.'
-    Type: String
-  ConsulVersion:
-    Type: String
-    Default: "1.8.4"
-    AllowedValues:
-      - "1.8.4"
-  ConsulDeploymentSize:
-    Type: String
-    Default: "small"
-    Description: Deployment size of dedicated HashiCorp Consul nodes.
-    AllowedValues:
-      - "small"
-      - "medium"
-      - "large"
-  ConsulKubernetesNameSpace:
-    Default: "consul-server"
-    Type: String
-    Description: Kubernetes namespace for HashiCorp Consul.
-  ConsulNodes:
-    Type: Number
-    Default: "3"
-    AllowedValues:
-      - "3"
-    Description: The number of dedicated Consul server nodes and pods.
-  ConsulUILoadBalancerType:
-    Type: String
-    Default: "Internal"
-    Description: Choose whether the load balancer for HashiCorp Consul is internal or external to the VPC.
-    AllowedValues:
-      - "Internal"
-      - "External"
-  ConsulUIAccessCIDR:
-    AllowedPattern: "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/([0-9]|[1-2][0-9]|3[0-2]))$"
-    Default: 127.0.0.1/32
-    Description: 'The CIDR IP range that is permitted to access Consul Note: A value
-      of 0.0.0.0/0 allows access from ANY IP address.'
-    Type: String
-  WindowsNodeEdition:
-    Type: String
-    AllowedValues: [Core, Full]
-    Default: Core
-    Description: 'The edition of Windows AMI to use for Windows Nodegroups.'
-  WindowsNodeVersion:
-    Type: String
-    AllowedValues: ['2004', '2019']
-    Default: '2004'
-    Description: 'The version of windows to use for Windows Nodegroups.'
   EC2MetadataPutResponseHopLimit:
     Type: String
     Default: "1"
@@ -449,7 +228,8 @@ Parameters:
       NOTE: This will default to "required" in the next major release.
 Mappings:
   Config:
-    ParameterPrefix: { Value: '/datahub/amazon-eks' }
+    #ParameterPrefix: { Value: '/datahub/amazon-eks' }
+    ParameterPrefix: { Value: '' }
 Resources:
   EKSPrivateAccessEndpointParameter:
     Type: AWS::SSM::Parameter
@@ -465,18 +245,18 @@ Resources:
       - '{ "Value": "${JoinedEKSClusterLoggingTypes}" }'
       - JoinedEKSClusterLoggingTypes: !Join [",", !Ref EKSClusterLoggingTypes]
       Name: !Sub ["${ParameterPrefix}/${ConfigSetName}/controlplane/EKSClusterLoggingTypes", {ParameterPrefix: !FindInMap [Config, ParameterPrefix, Value]}]
-  EKSEncryptSecretsParameter:
-    Type: AWS::SSM::Parameter
-    Properties:
-      Type: String
-      Value: !Sub '{ "Value": "${EKSEncryptSecrets}" }'
-      Name: !Sub ["${ParameterPrefix}/${ConfigSetName}/controlplane/EKSEncryptSecrets", {ParameterPrefix: !FindInMap [Config, ParameterPrefix, Value]}]
-  EKSEncryptSecretsKmsKeyArnParameter:
-    Type: AWS::SSM::Parameter
-    Properties:
-      Type: String
-      Value: !Sub '{ "Value": "${EKSEncryptSecretsKmsKeyArn}" }'
-      Name: !Sub ["${ParameterPrefix}/${ConfigSetName}/controlplane/EKSEncryptSecretsKmsKeyArn", {ParameterPrefix: !FindInMap [Config, ParameterPrefix, Value]}]
+#  EKSEncryptSecretsParameter:
+#    Type: AWS::SSM::Parameter
+#    Properties:
+#      Type: String
+#      Value: !Sub '{ "Value": "${EKSEncryptSecrets}" }'
+#      Name: !Sub ["${ParameterPrefix}/${ConfigSetName}/controlplane/EKSEncryptSecrets", {ParameterPrefix: !FindInMap [Config, ParameterPrefix, Value]}]
+#  EKSEncryptSecretsKmsKeyArnParameter:
+#    Type: AWS::SSM::Parameter
+#    Properties:
+#      Type: String
+#      Value: !Sub '{ "Value": "${EKSEncryptSecretsKmsKeyArn}" }'
+#      Name: !Sub ["${ParameterPrefix}/${ConfigSetName}/controlplane/EKSEncryptSecretsKmsKeyArn", {ParameterPrefix: !FindInMap [Config, ParameterPrefix, Value]}]
   EKSPublicAccessCIDRsParameter:
     Type: AWS::SSM::Parameter
     Properties:
@@ -503,36 +283,36 @@ Resources:
       Type: String
       Value: !Sub '{ "Value": "${CustomAmiId}" }'
       Name: !Sub ["${ParameterPrefix}/${ConfigSetName}/default-nodegroup/CustomAmiId", {ParameterPrefix: !FindInMap [Config, ParameterPrefix, Value]}]
-  NodeSecurityGroupIdParameter:
-    Type: AWS::SSM::Parameter
-    Properties:
-      Type: String
-      Value: !Sub '{ "Value": "${NodeSecurityGroupId}" }'
-      Name: !Sub ["${ParameterPrefix}/${ConfigSetName}/default-nodegroup/NodeSecurityGroupId", {ParameterPrefix: !FindInMap [Config, ParameterPrefix, Value]}]
-  TaintsParameter:
-    Type: AWS::SSM::Parameter
-    Properties:
-      Type: String
-      Value: !Sub '{ "Value": "${Taints}" }'
-      Name: !Sub ["${ParameterPrefix}/${ConfigSetName}/default-nodegroup/Taints", {ParameterPrefix: !FindInMap [Config, ParameterPrefix, Value]}]
-  LabelsParameter:
-    Type: AWS::SSM::Parameter
-    Properties:
-      Type: String
-      Value: !Sub '{ "Value": "${Labels}" }'
-      Name: !Sub ["${ParameterPrefix}/${ConfigSetName}/default-nodegroup/Labels", {ParameterPrefix: !FindInMap [Config, ParameterPrefix, Value]}]
-  LaunchTemplateVersionParameter:
-    Type: AWS::SSM::Parameter
-    Properties:
-      Type: String
-      Value: !Sub '{ "Value": "${LaunchTemplateVersion}" }'
-      Name: !Sub ["${ParameterPrefix}/${ConfigSetName}/default-nodegroup/LaunchTemplateVersion", {ParameterPrefix: !FindInMap [Config, ParameterPrefix, Value]}]
-  LaunchTemplateIdParameter:
-    Type: AWS::SSM::Parameter
-    Properties:
-      Type: String
-      Value: !Sub '{ "Value": "${LaunchTemplateId}" }'
-      Name: !Sub ["${ParameterPrefix}/${ConfigSetName}/default-nodegroup/LaunchTemplateId", {ParameterPrefix: !FindInMap [Config, ParameterPrefix, Value]}]
+#  NodeSecurityGroupIdParameter:
+#    Type: AWS::SSM::Parameter
+#    Properties:
+#      Type: String
+#      Value: !Sub '{ "Value": "${NodeSecurityGroupId}" }'
+#      Name: !Sub ["${ParameterPrefix}/${ConfigSetName}/default-nodegroup/NodeSecurityGroupId", {ParameterPrefix: !FindInMap [Config, ParameterPrefix, Value]}]
+#  TaintsParameter:
+#    Type: AWS::SSM::Parameter
+#    Properties:
+#      Type: String
+#      Value: !Sub '{ "Value": "${Taints}" }'
+#      Name: !Sub ["${ParameterPrefix}/${ConfigSetName}/default-nodegroup/Taints", {ParameterPrefix: !FindInMap [Config, ParameterPrefix, Value]}]
+#  LabelsParameter:
+#    Type: AWS::SSM::Parameter
+#    Properties:
+#      Type: String
+#      Value: !Sub '{ "Value": "${Labels}" }'
+#      Name: !Sub ["${ParameterPrefix}/${ConfigSetName}/default-nodegroup/Labels", {ParameterPrefix: !FindInMap [Config, ParameterPrefix, Value]}]
+#  LaunchTemplateVersionParameter:
+#    Type: AWS::SSM::Parameter
+#    Properties:
+#      Type: String
+#      Value: !Sub '{ "Value": "${LaunchTemplateVersion}" }'
+#      Name: !Sub ["${ParameterPrefix}/${ConfigSetName}/default-nodegroup/LaunchTemplateVersion", {ParameterPrefix: !FindInMap [Config, ParameterPrefix, Value]}]
+#  LaunchTemplateIdParameter:
+#    Type: AWS::SSM::Parameter
+#    Properties:
+#      Type: String
+#      Value: !Sub '{ "Value": "${LaunchTemplateId}" }'
+#      Name: !Sub ["${ParameterPrefix}/${ConfigSetName}/default-nodegroup/LaunchTemplateId", {ParameterPrefix: !FindInMap [Config, ParameterPrefix, Value]}]
   NodeInstanceTypeParameter:
     Type: AWS::SSM::Parameter
     Properties:
@@ -551,30 +331,30 @@ Resources:
       Type: String
       Value: !Sub '{ "Value": "${MaxNumberOfNodes}" }'
       Name: !Sub ["${ParameterPrefix}/${ConfigSetName}/default-nodegroup/MaxNumberOfNodes", {ParameterPrefix: !FindInMap [Config, ParameterPrefix, Value]}]
-  NodeInstanceType2Parameter:
-    Type: AWS::SSM::Parameter
-    Properties:
-      Type: String
-      Value: !Sub '{ "Value": "${NodeInstanceType2}" }'
-      Name: !Sub ["${ParameterPrefix}/${ConfigSetName}/default-nodegroup/NodeInstanceType2", {ParameterPrefix: !FindInMap [Config, ParameterPrefix, Value]}]
-  NodeInstanceType3Parameter:
-    Type: AWS::SSM::Parameter
-    Properties:
-      Type: String
-      Value: !Sub '{ "Value": "${NodeInstanceType3}" }'
-      Name: !Sub ["${ParameterPrefix}/${ConfigSetName}/default-nodegroup/NodeInstanceType3", {ParameterPrefix: !FindInMap [Config, ParameterPrefix, Value]}]
-  NodeInstanceType4Parameter:
-    Type: AWS::SSM::Parameter
-    Properties:
-      Type: String
-      Value: !Sub '{ "Value": "${NodeInstanceType4}" }'
-      Name: !Sub ["${ParameterPrefix}/${ConfigSetName}/default-nodegroup/NodeInstanceType4", {ParameterPrefix: !FindInMap [Config, ParameterPrefix, Value]}]
-  OnDemandPercentageParameter:
-    Type: AWS::SSM::Parameter
-    Properties:
-      Type: String
-      Value: !Sub '{ "Value": "${OnDemandPercentage}" }'
-      Name: !Sub ["${ParameterPrefix}/${ConfigSetName}/default-nodegroup/OnDemandPercentage", {ParameterPrefix: !FindInMap [Config, ParameterPrefix, Value]}]
+#  NodeInstanceType2Parameter:
+#    Type: AWS::SSM::Parameter
+#    Properties:
+#      Type: String
+#      Value: !Sub '{ "Value": "${NodeInstanceType2}" }'
+#      Name: !Sub ["${ParameterPrefix}/${ConfigSetName}/default-nodegroup/NodeInstanceType2", {ParameterPrefix: !FindInMap [Config, ParameterPrefix, Value]}]
+#  NodeInstanceType3Parameter:
+#    Type: AWS::SSM::Parameter
+#    Properties:
+#      Type: String
+#      Value: !Sub '{ "Value": "${NodeInstanceType3}" }'
+#      Name: !Sub ["${ParameterPrefix}/${ConfigSetName}/default-nodegroup/NodeInstanceType3", {ParameterPrefix: !FindInMap [Config, ParameterPrefix, Value]}]
+#  NodeInstanceType4Parameter:
+#    Type: AWS::SSM::Parameter
+#    Properties:
+#      Type: String
+#      Value: !Sub '{ "Value": "${NodeInstanceType4}" }'
+#      Name: !Sub ["${ParameterPrefix}/${ConfigSetName}/default-nodegroup/NodeInstanceType4", {ParameterPrefix: !FindInMap [Config, ParameterPrefix, Value]}]
+#  OnDemandPercentageParameter:
+#    Type: AWS::SSM::Parameter
+#    Properties:
+#      Type: String
+#      Value: !Sub '{ "Value": "${OnDemandPercentage}" }'
+#      Name: !Sub ["${ParameterPrefix}/${ConfigSetName}/default-nodegroup/OnDemandPercentage", {ParameterPrefix: !FindInMap [Config, ParameterPrefix, Value]}]
   KubernetesVersionParameter:
     Type: AWS::SSM::Parameter
     Properties:
@@ -587,18 +367,6 @@ Resources:
       Type: String
       Value: !Sub '{ "Value": "${IamOidcProvider}" }'
       Name: !Sub ["${ParameterPrefix}/${ConfigSetName}/cluster/IamOidcProvider", {ParameterPrefix: !FindInMap [Config, ParameterPrefix, Value]}]
-  WindowsNodeEditionParameter:
-    Type: AWS::SSM::Parameter
-    Properties:
-      Type: String
-      Value: !Sub '{ "Value": "${WindowsNodeEdition}" }'
-      Name: !Sub ["${ParameterPrefix}/${ConfigSetName}/windows-nodegroup/WindowsNodeEdition", {ParameterPrefix: !FindInMap [Config, ParameterPrefix, Value]}]
-  WindowsNodeVersionParameter:
-    Type: AWS::SSM::Parameter
-    Properties:
-      Type: String
-      Value: !Sub '{ "Value": "${WindowsNodeVersion}" }'
-      Name: !Sub ["${ParameterPrefix}/${ConfigSetName}/windows-nodegroup/WindowsNodeVersion", {ParameterPrefix: !FindInMap [Config, ParameterPrefix, Value]}]
   EC2MetadataPutResponseHopLimitParameter:
     Type: AWS::SSM::Parameter
     Properties:
