--- a/templates/nested/amazon-eks/templates/amazon-eks-entrypoint-existing-vpc.template.yaml
+++ b/templates/nested/amazon-eks/templates/amazon-eks-entrypoint-existing-vpc.template.yaml
@@ -22,7 +22,6 @@ Metadata:
     - Disabled
     - Snyk
     - '"No"'
-    - Windows
     - Grafana
     - Prometheus
     - namespaces
@@ -34,9 +33,6 @@ Metadata:
     - Unmanaged
     - Partner
     - Auto Scaling
-    - Vault
-    - Consul
-    - HashiCorp
     - Hosted
     - Domain Name
     - DomainName
@@ -102,62 +98,13 @@ Metadata:
           - NodeGroupType
           - NodeGroupOS
       - Label:
-          default: Snyk monitor (AWS Partner security)
-        Parameters:
-          - SnykIntegration
-          - SnykIntegrationId
-      - Label:
-          default: New Relic infrastructure (AWS Partner monitoring)
-        Parameters:
-          - NewRelicIntegration
-          - NewRelicLicenseKey
-      - Label:
-          default: Calico policy [APN security partner]
-        Parameters:
-          - CalicoIntegration
-      - Label:
-          default: Rafay Systems [APN software & internet partner]
-        Parameters:
-          - RafaySysIntegration
-          - RafaySysProject
-          - RafaySysBootstrapBucket
-          - RafaySysBootstrapKey
-          - RafaySysApiKey
-          - RafaySysApiSecret
-          - RafaySysFirstName
-          - RafaySysLastName
-          - RafaySysOrganizationName
-          - RafaySysEmail
-      - Label:
-          default: HashiCorp Vault (AWS Partner security)
-        Parameters:
-          - VaultIntegration
-          - VaultUIACMSSLCertificateArn
-          - VaultUIHostedZoneID
-          - VaultUIDomainName
-      - Label:
-          default: HashiCorp Consul (AWS Partner containers)
-        Parameters:
-          - ConsulIntegration
-          - ConsulUIACMSSLCertificateArn
-          - ConsulUIHostedZoneID
-          - ConsulUIDomainName
-      - Label:
-          default: Rancher management (AWS Partner management)
-        Parameters:
-          - RancherIntegration
-          - RancherDomainName
-      - Label:
           default: Kubernetes add-ins
         Parameters:
           - ALBIngressController
           - ClusterAutoScaler
-          - EfsStorageClass
           - PrometheusIntegration
-          - GrafanaIntegration
-          - MonitoringStack
       - Label:
-          default: AWS Quick Start configuration
+          default: Configuration
         Parameters:
           - QSS3BucketName
           - QSS3KeyPrefix
@@ -166,11 +113,11 @@ Metadata:
       KeyPairName:
         default: SSH key name
       QSS3BucketName:
-        default: Quick Start S3 bucket name
+        default: S3 bucket name
       QSS3KeyPrefix:
-        default: Quick Start S3 key prefix
+        default: S3 key prefix
       QSS3BucketRegion:
-        default: Quick Start S3 bucket Region
+        default: S3 bucket Region
       RemoteAccessCIDR:
         default: Allowed external access CIDR
       NodeInstanceType:
@@ -199,44 +146,12 @@ Metadata:
         default: Custom Admin Node Role ARN (IAM Role)
       ClusterAutoScaler:
         default: Cluster autoscaler
-      EfsStorageClass:
-        default: EFS storage class
       ProvisionBastionHost:
         default: Provision bastion host
       ALBIngressController:
         default: AWS load balancer controller
       EKSClusterName:
         default: EKS cluster name
-      SnykIntegrationId:
-        default: Integration ID
-      SnykIntegration:
-        default: Snyk integration
-      NewRelicIntegration:
-        default: New Relic integration
-      NewRelicLicenseKey:
-        default: License key
-      CalicoIntegration:
-        default: Calico policy integration
-      RafaySysIntegration:
-        default: Rafay Systems integration
-      RafaySysProject:
-        default: Rafay project
-      RafaySysFirstName:
-        default: First name
-      RafaySysLastName:
-        default: Last name
-      RafaySysOrganizationName:
-        default: Organization name
-      RafaySysEmail:
-        default: Email
-      RafaySysApiKey:
-        default: API key
-      RafaySysApiSecret:
-        default: API secret
-      RafaySysBootstrapBucket:
-        default: Bootstrap S3 bucket
-      RafaySysBootstrapKey:
-        default: Bootstrap S3 key
       EKSPublicAccessEndpoint:
         default: EKS public access endpoint
       HttpProxy:
@@ -247,8 +162,6 @@ Metadata:
         default: Per-account shared resources
       PerRegionSharedResources:
         default: Per-Region shared resources
-      MonitoringStack:
-        default: Monitoring stack
       MaxNumberOfNodes:
         default: Maximum number of nodes
       FargateNamespaces:
@@ -261,30 +174,8 @@ Metadata:
         default: Node group type
       NodeGroupOS:
         default: Node group operating system
-      VaultIntegration:
-        default: HashiCorp Vault integration
-      VaultUIACMSSLCertificateArn:
-        default: Vault UI ACM SSL certificate ARN
-      VaultUIHostedZoneID:
-        default: Route 53 hosted zone id
-      VaultUIDomainName:
-        default: Vault UI load balancer DNS name
-      ConsulIntegration:
-        default: HashiCorp Consul integration
-      ConsulUIACMSSLCertificateArn:
-        default: ACM SSL certificate ARN
-      ConsulUIHostedZoneID:
-        default: Route 53 hosted zone id
-      ConsulUIDomainName:
-        default: Consul UI load balancer DNS name
-      RancherIntegration:
-        default: Rancher management integration
-      RancherDomainName:
-        default: Rancher management domain name
       PrometheusIntegration:
         default: Prometheus integration
-      GrafanaIntegration:
-        default: Grafana integration
 Parameters:
   KeyPairName:
     Description: Name of an existing key pair, which allows you
@@ -293,26 +184,26 @@ Parameters:
     Default: ""
   QSS3BucketName:
     AllowedPattern: ^[0-9a-zA-Z]+([0-9a-zA-Z-]*[0-9a-zA-Z])*$
-    ConstraintDescription: Quick Start bucket name can include numbers, lowercase
+    ConstraintDescription: bucket name can include numbers, lowercase
       letters, uppercase letters, and hyphens (-). It cannot start or end with a hyphen
       (-).
     Default: cf-amazon-eks-templates-blrxgroup-us-west-2
-    Description: S3 bucket name for the Quick Start assets. This string can include
+    Description: S3 bucket name for the assets. This string can include
       numbers, lowercase letters, uppercase letters, and hyphens (-). It cannot start
       or end with a hyphen (-).
     Type: String
   QSS3KeyPrefix:
     AllowedPattern: ^[0-9a-zA-Z-/.]*$
-    ConstraintDescription: Quick Start key prefix can include numbers, lowercase letters,
+    ConstraintDescription: key prefix can include numbers, lowercase letters,
       uppercase letters, hyphens (-), periods (.) and forward slash (/).
     Default: dev/
-    Description: S3 key prefix for the Quick Start assets. Quick Start key prefix
+    Description: S3 key prefix for the assets. key prefix
       can include numbers, lowercase letters, uppercase letters, hyphens (-), periods (.) and
       forward slash (/).
     Type: String
   QSS3BucketRegion:
     Default: 'us-west-2'
-    Description: Region where the Quick Start S3 bucket (QSS3BucketName) is
+    Description: Region where the S3 bucket (QSS3BucketName) is
       hosted. When using your own bucket, you must specify this value.
     Type: String
   RemoteAccessCIDR:
@@ -377,11 +268,6 @@ Parameters:
     AllowedValues: [ Enabled, Disabled ]
     Default: Disabled
     Description: Choose "Enabled" to enable Kubernetes cluster autoscaler.
-  EfsStorageClass:
-    Type: String
-    AllowedValues: [ Enabled, Disabled ]
-    Default: Disabled
-    Description: Choose "Enabled" to enable EFS storage class.
   HttpProxy:
     Type: String
     Default: ""
@@ -401,24 +287,6 @@ Parameters:
     Type: String
     Default: ""
     Description: "(Optional) Name for the EKS cluster. If left blank, one is auto-generated. This must be unique within the Region."
-  SnykIntegrationId:
-    Type: String
-    AllowedPattern: '^[a-z0-9-]{36}$|^$'
-    Default: ""
-    Description: 'If Snyk is enabled, a value must be provided. For more information, see https://support.snyk.io/hc/en-us/articles/360003916158-Install-the-Snyk-controller-with-Helm.'
-  SnykIntegration:
-    Type: String
-    AllowedValues: [Enabled, Disabled]
-    Default: Disabled
-  NewRelicLicenseKey:
-    Type: String
-    Default: ""
-    NoEcho: true
-    Description: 'If New Relic is enabled, this must be provided. For more information, see https://docs.newrelic.com/docs/accounts/install-new-relic/account-setup/license-key.'
-  NewRelicIntegration:
-    Type: String
-    AllowedValues: [Enabled, Disabled]
-    Default: Disabled
   ConfigSetName:
     Type: String
     Default: ""
@@ -426,72 +294,16 @@ Parameters:
       (Optional) Name used to map advanced parameters to an EKS cluster. If you launched an advanced
       configuration stack and would like to apply it's values to this cluster, this name must match the "Config set name"
       parameter in that stack. If left blank, a new config set is created using default values.
-  CalicoIntegration:
-    Type: String
-    AllowedValues: [ Enabled, Disabled ]
-    Default: Disabled
-    Description: "For more information see https://www.projectcalico.org/ ."
-  RafaySysIntegration:
-    Type: String
-    AllowedValues: [ Enabled, Disabled ]
-    Default: Disabled
-  RafaySysProject:
-    Type: String
-    Description: "This is the name you want to use for you Rafay deployment."
-    Default: "defaultproject"
-  RafaySysBootstrapBucket:
-    Type: String
-    Description: "(Optional) S3 bucket to place the the rafay bootstrap yaml file. If left blank the EKS Quick Start bucket will be used."
-    Default: ""
-  RafaySysBootstrapKey:
-    Type: String
-    Description: "(Optional) S3 key to place the the rafay bootstrap yaml file. If left blank the key will be rafay/<CLUSTER_NAME>/cluster-bootstrap.yaml."
-    Default: ""
-  RafaySysApiKey:
-    Type: String
-    Description: Required if using an existing Rafay account.
-    Default: ""
-  RafaySysApiSecret:
-    Type: String
-    Description: Required if using an existing Rafay account.
-    Default: ""
-    NoEcho: true
-  RafaySysFirstName:
-    Type: String
-    Description: Required if registering a new Rafay account.
-    Default: ""
-  RafaySysLastName:
-    Type: String
-    Description: Required if registering a new Rafay account.
-    Default: ""
-  RafaySysOrganizationName:
-    Type: String
-    Description: Required if registering a new Rafay account.
-    Default: ""
-  RafaySysEmail:
-    Type: String
-    Description: Required if registering a new Rafay account.
-    Default: ""
   PerAccountSharedResources:
     Type: String
     AllowedValues: ['AutoDetect', 'Yes', 'No']
     Default: 'AutoDetect'
-    Description: Choose "No" if you already deployed another EKS Quick Start stack in your AWS account.
+    Description: Choose "No" if you already deployed another EKS stack in your AWS account.
   PerRegionSharedResources:
     Type: String
     AllowedValues: ['AutoDetect', 'Yes', 'No']
     Default: 'AutoDetect'
-    Description: Choose "No" if you already deployed another EKS Quick Start stack in your Region.
-  MonitoringStack:
-    Type: String
-    AllowedValues: [ "Prometheus + Grafana", "None" ]
-    Default: "None"
-    Description: 'Enable monitoring stack with "Prometheus+Grafana." Warning: this is a legacy parameter and will be dropped from the next version of this Quick Start. Please use the "Grafana integration" and "Prometheus integration" parameters instead.'
-  GrafanaIntegration:
-    Type: String
-    AllowedValues: [ Enabled, Disabled ]
-    Default: Disabled
-    Description: 'Grafana requires "Prometheus integration" to be enabled. For more information see https://www.grafana.com/ .'
+    Description: Choose "No" if you already deployed another EKS stack in your Region.
   PrometheusIntegration:
     Type: String
     AllowedValues: [ Enabled, Disabled ]
@@ -525,66 +337,9 @@ Parameters:
   NodeGroupOS:
     AllowedValues:
       - 'Amazon Linux 2'
-      - 'Bottlerocket'
-      - 'Windows'
     Default: 'Amazon Linux 2'
-    Description: Operating system to use for node instances. Note that if you choose "Windows," an additional
-      Amazon Linux node group is created.
+    Description: Operating system to use for node instances. 
     Type: String
-  VaultIntegration:
-    Type: String
-    AllowedValues: [Enabled, Disabled]
-    Default: Disabled
-  VaultUIDomainName:
-    Type: String
-    Description: >-
-      Fully qualified DNS name for the vault-ui service load balancer.
-      If you don't provide a value for "ACM SSL certificate ARN", use the HostedZoneID.
-    MaxLength: 128
-    Default: ""
-  VaultUIHostedZoneID:
-    Type: String
-    Description: >-
-      Route 53 Hosted zone ID of the domain name. If you don't provide an ACMSSLCertificateArn value, the Quick Start
-      creates an ACM certificate for you using HostedZoneID in conjunction with DomainName.
-    Default: ""
-  VaultUIACMSSLCertificateArn:
-    Description: >-
-      ARN of the load balancer's ACM SSL certificate. If you don't provide values for "Domain name" and
-      "Hosted zone id", provide a value for "ACM SSL certificate ARN".
-    Type: String
-    Default: ""
-  ConsulIntegration:
-    Type: String
-    AllowedValues: [Enabled, Disabled]
-    Default: Disabled
-  ConsulUIDomainName:
-    Type: String
-    Description: >-
-      Fully qualified DNS name for the consul-ui service load balancer.
-      If you don't provide a value for "ACM SSL certificate ARN", use the HostedZoneID.
-    MaxLength: 128
-    Default: ""
-  ConsulUIHostedZoneID:
-    Type: String
-    Description: >-
-      Route 53-hosted zone ID of the domain name. If you don't provide an ACMSSLCertificateArn value, the Quick Start
-      creates an ACM certificate for you using HostedZoneID in conjunction with DomainName.
-    Default: ""
-  ConsulUIACMSSLCertificateArn:
-    Description: >-
-      ARN of the load balancer's ACM SSL certificate. If you don't provide values for "Domain name" and
-      "Hosted zone id", provide a value for "ACM SSL certificate ARN".
-    Type: String
-    Default: ""
-  RancherIntegration:
-    Type: String
-    AllowedValues: [Enabled, Disabled]
-    Default: Disabled
-  RancherDomainName:
-    Description: DNS domain name that users can use to access the Rancher console.
-    Type: String
-    Default: aws.private
 Mappings:
   Config:
     Prefix: { Value: 'eks-datahub' }
@@ -596,14 +351,7 @@ Conditions:
   CreateAdvancedConfigWithDefaults: !Equals [!Ref ConfigSetName, '']
   CreatePerAccountSharedResources: !Equals [!Ref PerAccountSharedResources, 'Yes']
   CreatePerRegionSharedResources: !Equals [!Ref PerRegionSharedResources, 'Yes']
-  WindowsNodes: !Equals [!Ref NodeGroupOS, 'Windows']
-  VaultEnabled: !Equals [!Ref VaultIntegration, 'Enabled']
-  EnablePrometheus: !Or
-    - !Equals [!Ref PrometheusIntegration, "Enabled"]
-    - !Equals [!Ref MonitoringStack, "Prometheus + Grafana"]
-  EnableGrafana: !Or
-    - !Equals [!Ref GrafanaIntegration, "Enabled"]
-    - !Equals [!Ref MonitoringStack, "Prometheus + Grafana"]
+  EnablePrometheus: !Equals [!Ref PrometheusIntegration, "Enabled"]
 Resources:
   AutoDetectSharedResources:
     Type: AWS::CloudFormation::Stack
@@ -635,18 +383,6 @@ Resources:
         QSS3BucketName: !Ref QSS3BucketName
         QSS3KeyPrefix: !Ref QSS3KeyPrefix
       Tags: [{Key: !FindInMap [Config, Prefix, Value], Value: RegionalSharedResources}]
-  AdvancedConfigDefaultsStack:
-    Type: AWS::CloudFormation::Stack
-    Condition: CreateAdvancedConfigWithDefaults
-    Metadata: { cfn-lint: { config: { ignore_checks: [E9902, W9901] } } }
-    Properties:
-      TemplateURL: !Sub 'https://${QSS3BucketName}.s3.amazonaws.com/${QSS3KeyPrefix}templates/amazon-eks-advanced-configuration.template.yaml'
-      Parameters:
-        ConfigSetName: !Ref AWS::StackName
-        ConsulUIAccessCIDR: !Ref RemoteAccessCIDR
-        VaultUIAccessCIDR: !Ref RemoteAccessCIDR
-        NodeVolumeSize: !If [WindowsNodes, 50, !Ref 'AWS::NoValue']
-        KubernetesVersion: !If [VaultEnabled, '1.17', !Ref 'AWS::NoValue']
   EKSStack:
     Type: AWS::CloudFormation::Stack
     Metadata:
@@ -654,7 +390,6 @@ Resources:
       DependsOn:
       - !If [CreatePerRegionSharedResources, !Ref RegionalSharedResources, !Ref 'AWS::NoValue']
       - !If [CreatePerAccountSharedResources, !Ref AccountSharedResources, !Ref 'AWS::NoValue']
-      - !If [CreateAdvancedConfigWithDefaults, !Ref AdvancedConfigDefaultsStack, !Ref 'AWS::NoValue']
       - !If [DetectSharedStacks, !Ref AutoDetectSharedResources, !Ref 'AWS::NoValue']
     Properties:
       TemplateURL: !Sub 'https://${QSS3BucketName}.s3.amazonaws.com/${QSS3KeyPrefix}templates/amazon-eks.template.yaml'
@@ -679,44 +414,14 @@ Resources:
         AdditionalEKSAdminNodeRoleArn: !Ref AdditionalEKSAdminNodeRoleArn
         VPCID: !Ref VPCID
         ProvisionClusterAutoScaler: !Ref ClusterAutoScaler
-        #EfsStorageClass: !Ref EfsStorageClass
-        #ProvisionBastionHost: !Ref ProvisionBastionHost
         EKSPublicAccessEndpoint: !Ref EKSPublicAccessEndpoint
         ProvisionALBIngressController: !Ref ALBIngressController
         EKSClusterName: !Ref EKSClusterName
-        #SnykIntegrationId: !Ref SnykIntegrationId
-        #SnykIntegration: !Ref SnykIntegration
-        #NewRelicLicenseKey: !Ref NewRelicLicenseKey
-        #NewRelicIntegration: !Ref NewRelicIntegration
         ConfigSetName: !If [CreateAdvancedConfigWithDefaults, !Ref 'AWS::StackName', !Ref ConfigSetName]
-        #GrafanaIntegration: !If [EnableGrafana, 'Enabled', 'Disabled']
         PrometheusIntegration: !If [EnablePrometheus, 'Enabled', 'Disabled']
-        #FargateLabels: !Ref FargateLabels
-        #FargateNamespaces: !Ref FargateNamespaces
         NodeGroupOS: !Ref NodeGroupOS
         NodeGroupType: !Ref NodeGroupType
         NodeInstanceFamily: !Ref NodeInstanceFamily
-        #VaultIntegration: !Ref VaultIntegration
-        #VaultUIACMSSLCertificateArn: !Ref VaultUIACMSSLCertificateArn
-        #VaultUIHostedZoneID: !Ref VaultUIHostedZoneID
-        #VaultUIDomainName: !Ref VaultUIDomainName
-        #ConsulIntegration: !Ref ConsulIntegration
-        #ConsulUIACMSSLCertificateArn: !Ref ConsulUIACMSSLCertificateArn
-        #ConsulUIHostedZoneID: !Ref ConsulUIHostedZoneID
-        #ConsulUIDomainName: !Ref ConsulUIDomainName
-        #CalicoIntegration: !Ref CalicoIntegration
-        #RancherIntegration: !Ref RancherIntegration
-        #RancherDomainName: !Ref RancherDomainName
-        #RafaySysIntegration: !Ref RafaySysIntegration
-        #RafaySysProject: !Ref RafaySysProject
-        #RafaySysBootstrapBucket: !Ref RafaySysBootstrapBucket
-        #RafaySysBootstrapKey: !Ref RafaySysBootstrapKey
-        #RafaySysApiKey: !Ref RafaySysApiKey
-        #RafaySysApiSecret: !Ref RafaySysApiSecret
-        #RafaySysFirstName: !Ref RafaySysFirstName
-        #RafaySysLastName: !Ref RafaySysLastName
-        #RafaySysOrganizationName: !Ref RafaySysOrganizationName
-        #RafaySysEmail: !Ref RafaySysEmail
 Outputs:
   EKSClusterName:
     Value: !GetAtt EKSStack.Outputs.EKSClusterName
@@ -743,10 +448,3 @@ Rules:
       - AssertDescription: You must specify at least one Fargate namespace to enable Fargate.
         Assert: !Not
           - !Equals [ !Ref FargateNamespaces, "" ]
-  WindowsUnmanaged:
-    Assertions:
-      - Assert: !Not [!Equals [NodeGroupOS, 'Windows']]
-        AssertDescription: "Managed nodegroups do not support Windows nodes."
-    RuleCondition: !Equals
-      - !Ref NodeGroupType
-      - Managed
