--- a/templates/nested/amazon-eks/templates/amazon-eks-iam.template.yaml
+++ b/templates/nested/amazon-eks/templates/amazon-eks-iam.template.yaml
@@ -6,11 +6,11 @@ Metadata:
 Parameters:
   QSS3BucketName:
     AllowedPattern: ^[0-9a-zA-Z]+([0-9a-zA-Z-]*[0-9a-zA-Z])*$
-    ConstraintDescription: 'Quick Start bucket name can include numbers, lowercase
+    ConstraintDescription: 'Bucket name can include numbers, lowercase
       letters, uppercase letters, and hyphens (-). It cannot start or end with a hyphen
       (-).'
     Default: cf-amazon-eks-templates-blrxgroup-us-west-2
-    Description: 'S3 bucket name for the Quick Start assets. This string can include
+    Description: 'S3 bucket name for the assets. This string can include
       numbers, lowercase letters, uppercase letters, and hyphens (-). It cannot start
       or end with a hyphen (-).'
     Type: String
