--- a/templates/nested/amazon-eks/templates/amazon-eks.template.yaml
+++ b/templates/nested/amazon-eks/templates/amazon-eks.template.yaml
@@ -2,8 +2,6 @@ AWSTemplateFormatVersion: "2010-09-09"
 Description: Deploys an EKS cluster into an existing VPC
 Transform: [QuickStartParameterResolver]
 Metadata:
-  QSLint:
-    Exclusions: [W9002, W9003, W9004, W9006]
   ConfigSetName: !Ref ConfigSetName
 Parameters:
   KeyPairName:
@@ -19,7 +17,7 @@ Parameters:
     Type: String
   QSS3BucketRegion:
     Default: 'us-west-2'
-    Description: The Region where the Quick Start S3 bucket (QSS3BucketName) is
+    Description: The Region where the S3 bucket (QSS3BucketName) is
       hosted. When using your own bucket, you must specify this value.
     Type: String
   RemoteAccessCIDR:
@@ -79,10 +77,6 @@ Parameters:
     Type: String
     AllowedValues: [ "Enabled", "Disabled" ]
     Default: "Disabled"
-  GrafanaIntegration:
-    Type: String
-    AllowedValues: [ Enabled, Disabled ]
-    Default: Disabled
   PrometheusIntegration:
     Type: String
     AllowedValues: [ Enabled, Disabled ]
@@ -91,13 +85,6 @@ Parameters:
     Type: String
     AllowedValues: [ "Enabled", "Disabled" ]
     Default: "Enabled"
-  BastionAMIID:
-    Type: String
-    Default: ""
-  EfsStorageClass:
-    Type: String
-    AllowedValues: [ Enabled, Disabled ]
-    Default: Disabled
   HttpProxy:
     Type: String
     Default: ""
@@ -111,73 +98,8 @@ Parameters:
     Type: String
     Default: ""
     Description: "(Optional) Name for the EKS cluster. If left blank one will be auto-generated."
-  SnykIntegrationId:
-    Type: String
-    Default: ""
-  SnykIntegration:
-    Type: String
-    AllowedValues: [Enabled, Disabled]
-    Default: Disabled
-  NewRelicLicenseKey:
-    Type: String
-    Default: ""
-    NoEcho: true
-  NewRelicIntegration:
-    Type: String
-    AllowedValues: [Enabled, Disabled]
-    Default: Disabled
-  CalicoIntegration:
-    Type: String
-    AllowedValues: [ Enabled, Disabled ]
-    Default: Disabled
-    Description: "For more information see https://www.projectcalico.org/ ."
-  RafaySysIntegration:
-    Type: String
-    AllowedValues: [ Enabled, Disabled ]
-    Default: Disabled
-  RafaySysProject:
-    Type: String
-    Description: TODO
-    Default: "defaultproject"
-  RafaySysBootstrapBucket:
-    Type: String
-    Description: "(Optional) S3 bucket to place the the rafay bootstrap yaml file. If left blank the EKS Quick Start bucket will be used."
-    Default: ""
-  RafaySysBootstrapKey:
-    Type: String
-    Description: "(Optional) S3 key to place the the rafay bootstrap yaml file. If left blank the key will be rafay/<CLUSTER_NAME>/cluster-bootstrap.yaml."
-    Default: ""
-  RafaySysApiKey:
-    Type: String
-    Description: Required if using an existing Rafay account.
-    Default: ""
-  RafaySysApiSecret:
-    Type: String
-    Description: Required if using an existing Rafay account.
-    Default: ""
-    NoEcho: true
-  RafaySysFirstName:
-    Type: String
-    Description: Required if registering a new Rafay account.
-    Default: ""
-  RafaySysLastName:
-    Type: String
-    Description: Required if registering a new Rafay account.
-    Default: ""
-  RafaySysOrganizationName:
-    Type: String
-    Description: Required if registering a new Rafay account.
-    Default: ""
-  RafaySysEmail:
-    Type: String
-    Description: Required if registering a new Rafay account.
-    Default: ""
   ConfigSetName:
     Type: String
-  TestSuite:
-    Type: String
-    AllowedValues: [Enabled, Disabled]
-    Default: Disabled
   NodeInstanceFamily:
     AllowedValues: ['Standard', 'ARM', 'GPU']
     Type: String
@@ -185,8 +107,6 @@ Parameters:
   NodeGroupOS:
     AllowedValues:
       - 'Amazon Linux 2'
-      - 'Bottlerocket'
-      - 'Windows'
     Default: 'Amazon Linux 2'
     Description: The Linux distribution for the AMI to be used for the node instances. Ignored if "Custom launch template" is provided.
     Type: String
@@ -195,124 +115,37 @@ Parameters:
     AllowedValues: [ Managed, Unmanaged ]
     Default: Managed
     Description: Choose "Unmanaged" to create an auto-scaling group without using the EKS managed node groups feature.
-  VaultIntegration:
-    Type: String
-    AllowedValues: [Enabled, Disabled]
-    Default: Disabled
-  VaultUIDomainName:
-    Type: String
-    Description: >-
-      Fully qualified DNS name for the vault-ui service load balancer.
-      If you don't provide a value for "ACM SSL certificate ARN", use the HostedZoneID.
-    MaxLength: 128
-    Default: ""
-  VaultUIHostedZoneID:
-    Type: String
-    Description: >-
-      Route 53-hosted zone ID of the domain name. If you don't provide an ACMSSLCertificateArn value, the Quick Start
-      creates an ACM certificate for you using HostedZoneID in conjunction with DomainName.
-    Default: ""
-  VaultUIACMSSLCertificateArn:
-    Description: >-
-      ARN of the load balancer's ACM SSL certificate. If you don't provide values for "Domain name" and
-      "Hosted zone id", provide a value for "ACM SSL certificate ARN".
-    Type: String
-    Default: ""
-  ConsulIntegration:
-    Type: String
-    AllowedValues: [Enabled, Disabled]
-    Default: Disabled
-  ConsulUIDomainName:
-    Type: String
-    Description: >-
-      Fully qualified DNS name for the consul-ui service load balancer.
-      If you don't provide a value for "ACM SSL certificate ARN", use the ConsulHostedZoneID.
-    MaxLength: 128
-    Default: ""
-  ConsulUIHostedZoneID:
-    Type: String
-    Description: >-
-      Route 53-hosted zone ID of the domain name. If you don't provide an ConsulUIACMSSLCertificateArn value, the Quick Start
-      creates an ACM certificate for you using ConsulUIHostedZoneID in conjunction with ConsulUIDomainName.
-    Default: ""
-  ConsulUIACMSSLCertificateArn:
-    Description: >-
-      ARN of the load balancer's ACM SSL certificate. If you don't provide values for "Domain name" and
-      "Hosted zone id", provide a value for "ACM SSL certificate ARN".
-    Type: String
-    Default: ""
-  RancherIntegration:
-    Type: String
-    AllowedValues: [Enabled, Disabled]
-    Default: Disabled
-  RancherDomainName:
-    Description: DNS domain name that users can use to access the Rancher console.
-    Type: String
-    Default: rancher.aws.private
 Mappings:
   Config:
     Prefix: { Value: 'eks-datahub' }
-    ParameterPrefix: { Value: '/datahub/amazon-eks' }
+    #ParameterPrefix: { Value: '/datahub/amazon-eks' }
+    ParameterPrefix: { Value: '' }
 Conditions:
   EnableProxy: !Not [!Equals [!Ref HttpProxy, ""]]
-#  DeployTestStack: !Equals [!Ref TestSuite, Enabled]
-#  EnableSnyk: !Equals [ !Ref SnykIntegration, Enabled]
-#  EnableVault: !Equals [ !Ref VaultIntegration, Enabled]
-#  EnableConsul: !Equals [ !Ref ConsulIntegration, Enabled]
-#  EnableNewRelic: !Equals [ !Ref NewRelicIntegration, Enabled]
-#  EnableCalico: !Equals [ !Ref CalicoIntegration, Enabled]
-#  EnableRafaySys: !Equals [ !Ref RafaySysIntegration, Enabled ]
   EnableFargate: !Not [!Equals [ !Ref FargateNamespaces, ""]]
-#  EnableRancher: !Equals [!Ref RancherIntegration, Enabled]
   3AZDeployment: !Not [!Equals [!Ref PrivateSubnet3ID, ""]]
   2AZDeployment: !Or
     - !Not [!Equals [!Ref PrivateSubnet2ID, ""]]
     - !Not [!Equals [!Ref PrivateSubnet3ID, ""]]
   EnablePublicSubnets: !Not [!Equals [!Ref PublicSubnet1ID, ""]]
-  #DefaultBastionBootstrap: !Equals [~~/<ConfigSetName>/bastion/BastionBootstrapScript~~, '']
   EnableBastion: !And
     - !Equals [!Ref 'ProvisionBastionHost', 'Enabled']
     - !Not [!Equals [!Ref PublicSubnet1ID, ""]]
-  #CustomBastionRole: !Not [!Equals [~~/<ConfigSetName>/bastion/BastionIAMRoleName~~, '']]
-  #AdditionalVars: !Not [!Equals [~~/<ConfigSetName>/bastion/BastionVariables~~, '']]
   EnableClusterAutoScaler: !Equals [!Ref 'ProvisionClusterAutoScaler', 'Enabled']
-#  EnableMetricsServer: !Equals [!Ref 'ProvisionMetricsServer', 'Enabled']
   EnableLoadBalancerController: !Equals [!Ref 'ProvisionALBIngressController', 'Enabled']
-#  EnableGrafana: !Equals [!Ref 'GrafanaIntegration', 'Enabled']
   EnablePrometheus: !Equals [!Ref 'PrometheusIntegration', 'Enabled']
-#  EnableEfs: !Equals [!Ref 'EfsStorageClass', 'Enabled']
-  EnableWindows: !Equals [!Ref 'NodeGroupOS', 'Windows']
   UsingDefaultBucket: !Equals [!Ref QSS3BucketName, 'aws-quickstart']
   GenerateClusterName: !Equals [!Ref 'EKSClusterName', '']
   EnableOIDC: !Or
     - !Equals [!Ref 'ProvisionALBIngressController', 'Enabled']
-    - !Equals [!Ref 'NodeGroupOS', 'Windows']
     - !Equals [~~/<ConfigSetName>/cluster/IamOidcProvider~~, "Enabled"]
   UseKeyPair: !Not [ !Equals [ !Ref KeyPairName, "" ] ]
 Resources:
-#  BastionEksPermissions:
-#    Condition: EnableBastion
-#    Type: AWS::IAM::Policy
-#    Properties:
-#      PolicyName: "AllowEKSClusterOperations"
-#      PolicyDocument:
-#        Version: "2012-10-17"
-#        Statement:
-#          - Effect: "Allow"
-#            Action:
-#              - "eks:DescribeCluster"
-#              - "eks:DescribeUpdate"
-#              - "eks:ListUpdates"
-#              - "eks:UpdateClusterVersion"
-#            Resource: !Sub "arn:${AWS::Partition}:eks:${AWS::Region}:${AWS::AccountId}:cluster/${EKSControlPlane.Outputs.EKSName}"
-#      Roles:
-#        - !GetAtt IamStack.Outputs.BastionRole
   NodeGroupStack:
     Type: "AWS::CloudFormation::Stack"
     Metadata:
       cfn-lint: { config: { ignore_checks: [ W9901 ] } }
       DependsOn:
-        - !If [EnableWindows, !Ref WindowsSupportNodeGroupStack, !Ref 'AWS::NoValue']
         - !Ref EKSControlPlane
     Properties:
       TemplateURL: !Sub 'https://${QSS3BucketName}.s3.amazonaws.com/${QSS3KeyPrefix}submodules/amazon-eks-nodegroup/templates/amazon-eks-nodegroup.template.yaml'
@@ -323,11 +156,8 @@ Resources:
         Subnet1ID: !Ref PrivateSubnet1ID
         Subnet2ID: !If [2AZDeployment, !Ref PrivateSubnet2ID, !Ref "AWS::NoValue" ]
         Subnet3ID: !If [3AZDeployment, !Ref PrivateSubnet3ID, !Ref "AWS::NoValue" ]
-        #NodeInstanceType: !Ref NodeInstanceType
         NodeInstanceType: ~~/<ConfigSetName>/default-nodegroup/NodeInstanceType~~
-        #NumberOfNodes: !Ref NumberOfNodes
         NumberOfNodes: ~~/<ConfigSetName>/default-nodegroup/NumberOfNodes~~
-        #MaxNumberOfNodes: !Ref MaxNumberOfNodes
         MaxNumberOfNodes: ~~/<ConfigSetName>/default-nodegroup/MaxNumberOfNodes~~
         NodeGroupName: ~~/<ConfigSetName>/default-nodegroup/NodeGroupName~~
         NodeVolumeSize: ~~/<ConfigSetName>/default-nodegroup/NodeVolumeSize~~
@@ -335,41 +165,15 @@ Resources:
         EKSClusterName: !If [GenerateClusterName, !Ref GenerateName, !Ref EKSClusterName]
         NodeInstanceFamily: !Ref NodeInstanceFamily
         NodeGroupType: !Ref NodeGroupType
-        OndemandPercentage: ~~/<ConfigSetName>/default-nodegroup/OnDemandPercentage~~
-        NodeInstanceType2: ~~/<ConfigSetName>/default-nodegroup/NodeInstanceType2~~
-        NodeInstanceType3: ~~/<ConfigSetName>/default-nodegroup/NodeInstanceType3~~
-        NodeInstanceType4: ~~/<ConfigSetName>/default-nodegroup/NodeInstanceType4~~
-        Labels: ~~/<ConfigSetName>/default-nodegroup/Labels~~
-        Taints: ~~/<ConfigSetName>/default-nodegroup/Taints~~
-        NodeSecurityGroupId: ~~/<ConfigSetName>/default-nodegroup/NodeSecurityGroupId~~
-        LaunchTemplateId: ~~/<ConfigSetName>/default-nodegroup/LaunchTemplateId~~
-        LaunchTemplateVersion: ~~/<ConfigSetName>/default-nodegroup/LaunchTemplateVersion~~
-        WindowsVersion: ~~/<ConfigSetName>/windows-nodegroup/WindowsNodeVersion~~
-        WindowsEdition: ~~/<ConfigSetName>/windows-nodegroup/WindowsNodeEdition~~
-        EC2MetadataPutResponseHopLimit: ~~/<ConfigSetName>/default-nodegroup/EC2MetadataPutResponseHopLimit~~
-        EC2MetadataHttpTokens: ~~/<ConfigSetName>/default-nodegroup/EC2MetadataHttpTokens~~
-  WindowsSupportNodeGroupStack:
-    Type: "AWS::CloudFormation::Stack"
-    Condition: EnableWindows
-    DependsOn: EKSControlPlane
-    Metadata:
-      cfn-lint: {config: {ignore_checks: [E9902, W9901]}}
-    Properties:
-      TemplateURL: !Sub 'https://${QSS3BucketName}.s3.amazonaws.com/${QSS3KeyPrefix}submodules/amazon-eks-nodegroup/templates/amazon-eks-nodegroup.template.yaml'
-      Parameters:
-        HttpProxy: !Ref HttpProxy
-        KeyPairName: !If [UseKeyPair, !Ref KeyPairName, !Ref 'AWS::NoValue']
-        NodeGroupOS: "Amazon Linux 2"
-        Subnet1ID: !Ref PrivateSubnet1ID
-        Subnet2ID: !If [2AZDeployment, !Ref PrivateSubnet2ID, !Ref "AWS::NoValue" ]
-        Subnet3ID: !If [3AZDeployment, !Ref PrivateSubnet3ID, !Ref "AWS::NoValue" ]
-        NodeInstanceType: t3.large
-        NumberOfNodes: 2
-        NodeGroupName: windows-support-al2
-        NodeVolumeSize: 20
-        EKSClusterName: !If [GenerateClusterName, !Ref GenerateName, !Ref EKSClusterName]
-        NodeInstanceFamily: Standard
-        NodeGroupType: Managed
+        #OndemandPercentage: ~~/<ConfigSetName>/default-nodegroup/OnDemandPercentage~~
+        #NodeInstanceType2: ~~/<ConfigSetName>/default-nodegroup/NodeInstanceType2~~
+        #NodeInstanceType3: ~~/<ConfigSetName>/default-nodegroup/NodeInstanceType3~~
+        #NodeInstanceType4: ~~/<ConfigSetName>/default-nodegroup/NodeInstanceType4~~
+        #Labels: ~~/<ConfigSetName>/default-nodegroup/Labels~~
+        #Taints: ~~/<ConfigSetName>/default-nodegroup/Taints~~
+        #NodeSecurityGroupId: ~~/<ConfigSetName>/default-nodegroup/NodeSecurityGroupId~~
+        #LaunchTemplateId: ~~/<ConfigSetName>/default-nodegroup/LaunchTemplateId~~
+        #LaunchTemplateVersion: ~~/<ConfigSetName>/default-nodegroup/LaunchTemplateVersion~~
         EC2MetadataPutResponseHopLimit: ~~/<ConfigSetName>/default-nodegroup/EC2MetadataPutResponseHopLimit~~
         EC2MetadataHttpTokens: ~~/<ConfigSetName>/default-nodegroup/EC2MetadataHttpTokens~~
   CloudFormationKubernetesVPCRoleExists:
@@ -385,8 +189,6 @@ Resources:
       Parameters:
         QSS3BucketName: !Ref QSS3BucketName
         CreateBastionRole: "Disabled"
-        #CreateBastionRole: !If [CustomBastionRole, "Disabled", !If [EnableBastion, "Enabled", "Disabled"]]
-        #BastionIAMRoleName: ~~/<ConfigSetName>/bastion/BastionIAMRoleName~~
         CloudFormationKubernetesVPCRoleExists: !Ref CloudFormationKubernetesVPCRoleExists
   FunctionStack:
     Type: "AWS::CloudFormation::Stack"
@@ -482,8 +284,8 @@ Resources:
         EKSPublicAccessEndpoint: !Ref EKSPublicAccessEndpoint
         EKSPrivateAccessEndpoint: ~~/<ConfigSetName>/controlplane/EKSPrivateAccessEndpoint~~
         EKSClusterLoggingTypes: ~~/<ConfigSetName>/controlplane/EKSClusterLoggingTypes~~
-        EKSEncryptSecrets: ~~/<ConfigSetName>/controlplane/EKSEncryptSecrets~~
-        EKSEncryptSecretsKmsKeyArn: ~~/<ConfigSetName>/controlplane/EKSEncryptSecretsKmsKeyArn~~
+        #EKSEncryptSecrets: ~~/<ConfigSetName>/controlplane/EKSEncryptSecrets~~
+        #EKSEncryptSecretsKmsKeyArn: ~~/<ConfigSetName>/controlplane/EKSEncryptSecretsKmsKeyArn~~
         IamOidcProvider: !If [EnableOIDC, 'Enabled', 'Disabled']
         EKSClusterName: !If [GenerateClusterName, !Ref GenerateName, !Ref EKSClusterName]
   PrometheusStack:
