--- a/templates/datahub-deployment-v2-existing-vpc-2-subnets.yaml
+++ b/templates/datahub-deployment-v2-existing-vpc-2-subnets.yaml
@@ -969,7 +969,7 @@ Outputs:
     Value: !Sub "${AWS::StackName}"
     Condition: isCreateEKS
   EKSServiceRoleArn:
-    Value: !GetAtt EKSPreRequsiteStack.Outputs.EKSServiceRoleArn
+    Value: !GetAtt EKSPreRequsiteStack.Outputs.EksServiceRoleArn
     Condition: isCreateEKS
   NodeInstanceRoleArn:
     Value: !GetAtt NodeInstanceRole.Arn
